--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <p>Welcome to your simple HTML page!</p>
+    <p>Vreau sa schimb ceva!</p>
 </body>
 </html>
